<resources>
    <string name="app_name">Android-Playground</string>

    <string name="refresh_state_normal">Pull to refresh</string>
    <string name="refresh_state_ready">Release to refresh</string>
    <string name="refresh_state_loading">Loading</string>

    <string name="loadmore_state_normal">Load more</string>
    <string name="loadmore_state_loading">Loading</string>
    <string name="loadmore_state_ready">Pull to load more</string>
    <string name="loadmore_state_no_more">Load Finish</string>
    <string name="loadmore_state_fail">Click to reload</string>
    <string name="loadmore_state_empty_reload">No data, click to reload</string>

    <string name="info_over_scroll">拖动(Drag)或者滑动(Fling)越界有平滑的回弹</string>

    <string name="hint_word">Word...</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Word not saved because it is empty.</string>


    <string name="fa_song_pay_dialog_msg"><![CDATA[《%1$s》通过HTML部分文案<font color="#ff0000">%2$d</font>，改变颜色<b>%3$d</b>字体样式]]></string>


    <string name="emoji_text_view">Emoji TextView %s</string>
    <string name="emoji_edit_text">Emoji EditText %s</string>
    <string name="emoji_button">Emoji Button %s</string>
    <string name="regular_text_view">Regular TextView %s</string>
    <string name="custom_text_view">Custom TextView %s</string>
    <string name="add_cheese">add cheese</string>
    <string name="add">add</string>
    <string name="post_subtitle">Submitted by %s</string>
    <string name="search_hint">Subreddit Name</string>
    <string name="default_subreddit">androiddev</string>
    <string name="db_plus_network">db + network</string>
    <string name="network_only_by_item">network only (by item)</string>
    <string name="network_only_by_page">network only (by page)</string>


    <string name="profile_total_value">$%.2f</string>
    <string name="profile_total_value_label">Total Value</string>
    <string name="profile_name_label">Full name</string>
    <string name="profile_account_number_label">Account number</string>
    <string name="profile_phone_number_label">Phone number</string>
    <string name="profile_my_stocks_label">My stocks</string>
    <string name="profile_recommended_stock_label">Recommended Stock</string>
    <string name="profile_refresh_recommended_stock_description">Refresh recommended stock</string>
    <string name="profile_tip_title">Recommended Stock</string>
    <string name="profile_tip_message">Check out our stock recommendation, thoroughly curated for you by our AI-backed software!</string>


    <string name="show_full_screen_intent_button">Show Full Screen Intent</string>
    <string name="show_scheduled_full_screen_intent">Scheduled full screen intent</string>
    <string name="show_scheduled_full_screen_intent_lock_screen">Scheduled full screen intent for lock screen</string>
    <string name="full_screen_activity">Full Screen Activity</string>
    <string name="lock_screen_activity">Lock Screen Activity</string>
</resources>
